# m1kasaz_agent

./: .gitignore  .mcp.json  README.md  ai-plugin-lock.json  ai-plugin.json  output_agent_engineer_prompt_zh.txt  output_frontend_engineer_prompt_zh.txt
backend/: main.py  pyproject.toml
backend/app/: __init__.py  config.py  models.py  state.py
backend/app/agent/: __init__.py  orchestrator.py  registry.py  routing.py
backend/app/agent/skills/: __init__.py  base.py  chat.py  document.py  recommendation.py
backend/app/api/: server.py
backend/app/graph/: __init__.py  builder.py
backend/app/nodes/: __init__.py  chat.py  document.py  paper.py  router.py
backend/app/services/: __init__.py  app_retriever.py  artifact_service.py  document_converter.py  document_parser.py  document_service.py  paper_retriever.py  paper_service.py  ranker.py  retrieval.py  storage.py
backend/app/services/llm/: __init__.py  config.py  factory.py
backend/tests/: test_api.py  test_graph_routes.py
docs/: README.md
frontend/static/: app.js  index.html  styles.css
