[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m1kasaz-agent"
version = "0.1.0"
description = "Personal agent project built with LangGraph and Python"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph",
  "langchain-core",
  "langchain-openai",
  "langchain-anthropic",
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "pydantic-settings",
  "pypdf",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
  "ruff",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
